--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,6 @@
     font-style: normal;
 }
 
-
-
 /*
                                                               oooo  
                                                               `888  
@@ -26,15 +24,10 @@ d"     YD
 "Y88888P'                                                           
                                                                     */
 
+:root {}
 
-
-:root {
+html {
     
-}
-
-html{
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
 }
 
 body {
@@ -43,27 +36,38 @@ body {
     background: #111;
     font-family: "Fira Code";
     color: #eee;
+    
+    overflow: hidden;
+}
+
+.snapContainer{
     display: grid;
     justify-items: center;
-}
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
 
-.child{
     height: 100vh;
-    scroll-snap-align: start;
-    margin: 10vh 0;
 }
 
-.scrollSnap{
+.scrollSnap {
     scroll-snap-align: start;
 }
-.paddingSmall{
+
+.paddingSmall {
     padding: 10px;
 }
-.paddingMedium{
+
+.paddingMedium {
     padding: 20px;
 }
-.paddingLarge{
+
+.paddingLarge {
     padding: 30px;
+}
+
+.textCenter{
+    text-align: center;
 }
 /*
 oooo                                  .o8                     
@@ -75,10 +79,11 @@ oooo                                  .o8
 o888o o888o `Y8bod8P' `Y888""8o `Y8bod88P" `Y8bod8P' d888b    
                                                               */
 
-.navbarOffset{
+.navbarOffset {
     height: 50px;
 }
-.menu{
+
+.menu {
     display: grid;
     width: calc( 100% - 100px);
     grid-template-columns: auto 1fr auto;
@@ -92,14 +97,17 @@ o888o o888o `Y8bod8P' `Y888""8o `Y8bod88P" `Y8bod8P' d888b
     backdrop-filter: blur(5px) saturate(120%);
     height: 50px;
 }
-.menu #menuBtn{
+
+.menu #menuBtn {
     grid-column-end: -1;
 }
-.menu [for="menuBtn"]{
+
+.menu [for="menuBtn"] {
     grid-column-end: -1;
     width: 50px;
 }
-.menu ul{
+
+.menu ul {
     display: grid;
     grid-template-columns: auto 1fr auto auto auto;
     place-items: center;
@@ -109,20 +117,21 @@ o888o o888o `Y8bod8P' `Y888""8o `Y8bod88P" `Y8bod8P' d888b
     /* grid-column: 2/3;
     grid-row: 1/2; */
 }
+
 .menu ul li {
     list-style-type: none;
     display: inline-block;
     margin: 0px 32px;
 }
-.menu #menuBtn{
+
+.menu #menuBtn {
     display: none;
 }
-.menu #menuLogo img{
+
+.menu #menuLogo img {
     width: 50px;
     filter: invert(1);
 }
-
-
 
 /*
                              o8o              
@@ -135,17 +144,79 @@ o888o o888o o888o `Y888""8o o888o o888o o888o
                                               
                                               
                                               */
-.main{
+
+.main {
     display: grid;
     place-items: center;
     margin: 0;
     width: 50%;
 }
-.hpTitle{
+
+.hpTitle {
     font-size: 2em;
     font-family: "Fira Code";
 }
-.center{
+
+.center {
     display: grid;
     place-items: center;
+}
+
+#skillChart {
+    height: 400px;
+    width: 400px;
+}
+
+.child {
+    height: 100vh;
+    scroll-snap-align: start;
+    margin: 10vh 0;
+    position: relative;
+}
+
+.child.todo::after {
+    content: "TO DO \a" attr(data-todo);
+    white-space: pre;
+    position: absolute;
+    bottom: 0;
+    width: calc(100vw - 50px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+    padding: 1em;
+    text-align: center;
+    background-color: #f1c40f;
+    text-decoration: underline;
+    text-decoration-style: wavy;
+    text-decoration-color: red;
+    z-index: 9999;
+    display: grid;
+    place-items: center;
+    color: #fff;
+    font-size: 2em;
+    font-weight: bold;
+    opacity: 0.5;
+}
+
+/*
+ .o8                           oooo                                                                    .o8  
+"888                           `888                                                                   "888  
+ 888oooo.   .oooo.    .ooooo.   888  oooo   .oooooooo oooo d8b  .ooooo.  oooo  oooo  ooo. .oo.    .oooo888  
+ d88' `88b `P  )88b  d88' `"Y8  888 .8P'   888' `88b  `888""8P d88' `88b `888  `888  `888P"Y88b  d88' `888  
+ 888   888  .oP"888  888        888888.    888   888   888     888   888  888   888   888   888  888   888  
+ 888   888 d8(  888  888   .o8  888 `88b.  `88bod8P'   888     888   888  888   888   888   888  888   888  
+ `Y8bod8P' `Y888""8o `Y8bod8P' o888o o888o `8oooooo.  d888b    `Y8bod8P'  `V88V"V8P' o888o o888o `Y8bod88P" 
+                                           d"     YD                                                        
+                                           "Y88888P'                                                        
+                                                                                                            */
+.charBefore{
+    position: relative;
+}
+.charBefore::before{
+    content: attr(data-char);
+    position: absolute;
+    font-size: 14em;
+    opacity: 0.1;
+    left: -3rem; top: -0.5em;
+    z-index: -1;
 }
