--- a/css/anim.css
+++ b/css/anim.css
@@ -1,4 +1,4 @@
-.animGlow{
+body.play .animGlow{
     animation: animGlow 0.6s 1 forwards;
     animation-delay: 4s;
 }
@@ -13,7 +13,7 @@
     }
 }
 
-.animBlockReveal{
+body.play .animBlockReveal{
     position: relative;
 }
 
@@ -36,7 +36,7 @@
         right: 100%;
     }
 } */
-.animBlockReveal{
+body.play .animBlockReveal{
     display: inline-block;
     
     max-height: 0;
